Fixed center align issue on big screens

--- a/public/css/article.css
+++ b/public/css/article.css
@@ -495,6 +495,7 @@ pre > code {
     .article-container {
         padding: 3rem 2rem;
         max-width: 1000px;
+        grid-column: 2 / 3;
     } 
 
     .article-title{
